--- a/AttentiHomeChallenge/AttentiHomeChallenge.csproj
+++ b/AttentiHomeChallenge/AttentiHomeChallenge.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithm.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="Pixel.cs" />
     <Compile Include="Program.cs" />
